website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
    spec:
      containers:
      - name: website
        image: ghcr.io/xcoulon/argo-cd-example:sha-0aee041
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
