website/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: website
  name: website
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: website
  sessionAffinity: None
  type: ClusterIP
